add automated testing of documentation examples
This commit also fixes several bugs found in the examples.